# DualRAG-Ver2

./: .gitignore  API.md  DEPLOYMENT.md  README.md  main.py  pyproject.toml  requirements-api.txt  requirements.txt  setup.py
.conda-env/: .tmpv4aoc4n_.bat
.conda-env/.condatmp/: 0e8608f5-8984-429c-93d2-15060197d042  2fb5b335-4bcc-4961-a724-ee6e9fe6c8d8  5c2cca17-a9c7-47a7-84b6-88304773896e  ee98f28e-4815-4140-9e3e-02ce39f87ea6
.conda-env/conda-meta/: bzip2-1.0.8-h2bbff1b_6.json  ca-certificates-2025.11.4-haa95532_0.json  expat-2.7.3-h9214b88_0.json  libffi-3.4.4-hd77b12b_1.json  libzlib-1.3.1-h02ab6af_0.json  openssl-3.0.18-h543e019_0.json  pip-25.3-pyhc872135_0.json  python-3.12.12-h716150d_1.json  setuptools-80.9.0-py312haa95532_0.json  sqlite-3.51.0-hda9a48d_0.json  tk-8.6.15-hf199647_0.json  tzdata-2025b-h04d1e81_0.json  ucrt-10.0.22621.0-haa95532_0.json  vc-14.3-h2df5915_10.json  vc14_runtime-14.44.35208-h4927774_10.json  vs2015_runtime-14.44.35208-ha6b5a95_10.json  (+3 more)
api/: ARCHITECTURE.md  __init__.py  server.py
config/: .env.example  __init__.py  logging.yaml
data/: README.md
docs/: API.md  ARCHITECTURE.md  LLM_ORCHESTRATION.md  REPORTS.md  SETUP.md  SQL_RAG.md  STATIC_RAG.md
examples/: demo_sql_rag_chain.py  setup_test_database.py  setup_test_database.sql  test_sql_rag_with_real_db.py
frontend/: ARCHITECTURE.md  chatbot.html  index.html
scripts/: download_models.py  export_chunks_to_embeddings.py  init_schema_embeddings.py  init_sql_db.py  init_static_db.py  seed_data.py  test_orchestrator.py
src/: __init__.py
tests/: test_sql_rag_pipeline.py
(+100 files in other folders)
